--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Hospital Finder</title>
-    <script src="/eruda.js"></script>
+    <!-- <script src="/eruda.js"></script>
     <script>
       eruda.init();
     </script>
@@ -31,7 +31,7 @@
     <script src="/eruda-dom.js"></script>
     <script>
       eruda.add(erudaDom);
-    </script>
+    </script> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
